force-app/main/default/objects/OppReg_Quote_Tracker__c/OppReg_Quote_Tracker__c.object-meta.xml
<CustomObject>
    <description>SOQ-15-Track Opp Reg Quote Line Item creation and Hierarchy</description>
    <label>OppReg Quote Tracker</label>
    <nameField>
        <displayFormat>OppRegQuote-{00000}</displayFormat>
        <label>OppReg Quote Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OppReg Quote Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>