force-app/main/default/objects/OppReg_Quote_Tracker__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <label>QuoteId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>