force-app/main/default/objects/OppReg_Quote_Tracker__c/fields/QuoteLineCreated__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteLineCreated</label>
    <type>Checkbox</type>
</CustomField>