force-app/main/default/objects/OppReg_Quote_Tracker__c/fields/QuoteLineHierarchyCompleted__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineHierarchyCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteLineHierarchyCompleted</label>
    <type>Checkbox</type>
</CustomField>