force-app/main/default/objects/OppReg_Quote_Tracker__c/fields/QuoteLineHierarchyNeeded__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineHierarchyNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteLineHierarchyNeeded</label>
    <type>Checkbox</type>
</CustomField>